--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,12 @@
     "dev": "nodemon",
     "build": "tsc",
     "start": "node dist/index.js",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "build:prod": "NODE_ENV=production tsc",
+    "start:prod": "NODE_ENV=production node dist/index.js"
+  },
+  "engines": {
+    "node": ">=18"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.57.4",
