--- a/frontend/package.json
+++ b/frontend/package.json
@@ -57,10 +57,11 @@
       "devDependencies": {
             "@tailwindcss/postcss": "^4.1.13",
             "@types/node": "^20.10.0",
-            "@vitejs/plugin-react-swc": "^3.10.2",
+            "@vitejs/plugin-react-swc": "^3.11.0",
             "autoprefixer": "^10.4.21",
             "postcss": "^8.5.6",
             "tailwindcss": "^4.1.13",
+            "terser": "^5.44.0",
             "vite": "6.3.5"
       },
       "scripts": {
