--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
             "framer-motion": "^12.23.12",
             "hono": "^4.6.0",
             "input-otp": "^1.4.2",
+            "lightweight-charts": "^5.0.9",
             "lucide-react": "^0.487.0",
             "next-themes": "^0.4.6",
             "react": "^18.3.1",
