--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,57 +1,41 @@
-# Use Node.js 18 LTS Alpine for smaller image size
+# Node.js 20 LTS Alpine
 FROM node:20-alpine AS base
+WORKDIR /app
 
-# Install dependencies only when needed
+# ===== deps (prod) =====
 FROM base AS deps
-# Check https://github.com/nodejs/docker-node/tree/b4117f9333da4138b03a546ec926ef50a31506c3#nodealpine to understand why libc6-compat might be needed.
 RUN apk add --no-cache libc6-compat
-WORKDIR /app
+COPY package.json package-lock.json ./
+RUN npm ci --omit=dev && npm cache clean --force
 
-# Install dependencies based on the preferred package manager
-COPY package.json package-lock.json* ./
-RUN npm ci --only=production && npm cache clean --force
-
-# Rebuild the source code only when needed
+# ===== builder =====
 FROM base AS builder
-WORKDIR /app
-COPY package.json package-lock.json* ./
+COPY package.json package-lock.json ./
 RUN npm ci
 COPY . .
-
-# Build the application
+# pastikan script ini ada, kalau tidak pakai: npm run build
 RUN npm run build:prod
 
-# Production image, copy all the files and run the app
-FROM base AS runner
+# ===== runner =====
+FROM node:20-alpine AS runner
 WORKDIR /app
-
-# Create a non-root user
-RUN addgroup --system --gid 1001 nodejs
-RUN adduser --system --uid 1001 nodejs
-
-# Copy the built application
-COPY --from=builder /app/dist ./dist
-COPY --from=deps /app/node_modules ./node_modules
-COPY --from=builder /app/package.json ./package.json
-
-# Copy migration files
-COPY --from=builder /app/migrations ./migrations
-
-# Change ownership to nodejs user
-RUN chown -R nodejs:nodejs /app
-USER nodejs
-
-# Expose port
-EXPOSE 8080
-
-# Set environment variables
 ENV NODE_ENV=production
 ENV PORT=8080
 
-# Health check
+# user non-root
+RUN addgroup -S nodejs && adduser -S nodejs -G nodejs -u 1001
+
+# copy artefak dengan ownership langsung (butuh BuildKit)
+COPY --from=builder --chown=1001:1001 /app/dist ./dist
+COPY --from=deps    --chown=1001:1001 /app/node_modules ./node_modules
+COPY --from=builder --chown=1001:1001 /app/package.json ./package.json
+# jika kamu memang butuh folder ini di runtime
+COPY --from=builder --chown=1001:1001 /app/migrations ./migrations
+
+USER nodejs
+EXPOSE 8080
+
 HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
-  CMD node -e "require('http').get('http://localhost:8080/health', (res) => { process.exit(res.statusCode === 200 ? 0 : 1) })"
+  CMD node -e "require('http').get('http://localhost:8080/health', r=>process.exit(r.statusCode===200?0:1)).on('error',()=>process.exit(1))"
 
-# Start the application
 CMD ["npm", "start"]
-
