--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,14 @@ Thumbs.db
 **/yarn.lock
 **/package-lock.json
 
+# Izinkan lockfile di backend dan frontend
+!backend/package-lock.json
+!frontend/package-lock.json
+!backend/pnpm-lock.yaml
+!frontend/pnpm-lock.yaml
+!backend/yarn.lock
+!frontend/yarn.lock
+
 # Build artifacts
 **/dist/
 **/build/
@@ -30,12 +38,6 @@ Thumbs.db
 npm-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-+!backend/package-lock.json
-+!frontend/package-lock.json
-+!backend/pnpm-lock.yaml
-+!frontend/pnpm-lock.yaml
-+!backend/yarn.lock
-+!frontend/yarn.lock
 
 # Env
 .env
