--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,11 +34,13 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
     "hono": "^4.9.10",
     "input-otp": "^1.4.2",
     "lightweight-charts": "^5.0.9",
     "lucide-react": "^0.545.0",
+    "motion": "^12.23.24",
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -50,8 +52,7 @@
     "recharts": "^3.2.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
-    "vaul": "^1.1.2",
-    "motion": "^12.23.24"
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.14",
