--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -93,8 +93,22 @@ jobs:
             PAYMENT_TIMEOUT_MINUTES=${{ secrets.PAYMENT_TIMEOUT_MINUTES }} \
             AZURE_STORAGE_CONNECTION_STRING=${{ secrets.AZURE_STORAGE_CONNECTION_STRING }} \
             AZURE_STORAGE_CONTAINER_NAME=${{ secrets.AZURE_STORAGE_CONTAINER_NAME }} \
-            TICMI_API_KEY=${{ secrets.TICMI_API_KEY }} \
-            TICMI_API_URL=${{ secrets.TICMI_API_URL }} \
+            TICMI_JWT_TOKEN=${{ secrets.TICMI_JWT_TOKEN }} \
+            TICMI_API_BASE_URL=${{ secrets.TICMI_API_BASE_URL }} \
+            TICMI_STOCK_ENDPOINT=${{ secrets.TICMI_STOCK_ENDPOINT }} \
+            TICMI_INDEX_ENDPOINT=${{ secrets.TICMI_INDEX_ENDPOINT }} \
+            TICMI_SHAREHOLDERS_ENDPOINT=${{ secrets.TICMI_SHAREHOLDERS_ENDPOINT }} \
+            TICMI_HOLDING_ENDPOINT=${{ secrets.TICMI_HOLDING_ENDPOINT }} \
+            SCHEDULER_TIMEZONE=${{ secrets.SCHEDULER_TIMEZONE }} \
+            SCHEDULER_STOCK_UPDATE_TIME=${{ secrets.SCHEDULER_STOCK_UPDATE_TIME }} \
+            SCHEDULER_INDEX_UPDATE_TIME=${{ secrets.SCHEDULER_INDEX_UPDATE_TIME }} \
+            SCHEDULER_SHAREHOLDERS_UPDATE_TIME=${{ secrets.SCHEDULER_SHAREHOLDERS_UPDATE_TIME }} \
+            SCHEDULER_HOLDING_UPDATE_TIME=${{ secrets.SCHEDULER_HOLDING_UPDATE_TIME }} \
+            SCHEDULER_RRC_UPDATE_TIME=${{ secrets.SCHEDULER_RRC_UPDATE_TIME }} \
+            SCHEDULER_RRG_UPDATE_TIME=${{ secrets.SCHEDULER_RRG_UPDATE_TIME }} \
+            SCHEDULER_SEASONAL_UPDATE_TIME=${{ secrets.SCHEDULER_SEASONAL_UPDATE_TIME }} \
+            EMITEN_CSV_PATH=${{ secrets.EMITEN_CSV_PATH }} \
+            INDEX_CSV_PATH=${{ secrets.INDEX_CSV_PATH }} \
             LOG_LEVEL=${{ secrets.LOG_LEVEL }}
 
     - name: Show deployed image
