--- a/backend/package.json
+++ b/backend/package.json
@@ -12,14 +12,19 @@
     "start:prod": "NODE_ENV=production node --env-file=.env dist/index.js",
     "lint": "eslint . --ext ts --report-unused-disable-directives --max-warnings 0"
   },
-  "engines": { "node": ">=20" },
+  "engines": {
+    "node": ">=20"
+  },
   "dependencies": {
+    "@azure/storage-blob": "^12.17.0",
     "@supabase/supabase-js": "^2.75.0",
+    "@types/node-cron": "^3.0.11",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "jose": "^6.1.0",
     "midtrans-client": "^1.4.3",
     "multer": "^2.0.2",
+    "node-cron": "^4.2.1",
     "node-fetch": "^3.3.2",
     "pg": "^8.16.3",
     "uuid": "^13.0.0",
@@ -28,8 +33,8 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.3",
-    "@types/multer": "^1.4.12",
     "@types/midtrans-client": "^1.4.0",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.7.5",
     "@types/pg": "^8.15.5",
     "@types/uuid": "^9.0.7",
