--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -25,6 +25,6 @@
     "noPropertyAccessFromIndexSignature": true,
     "noUncheckedIndexedAccess": true
   },
-  "include": ["src"],
+  "include": ["src", "src/types/**/*.d.ts"],
   "exclude": ["node_modules", "dist"]
 }
