feat: add new calculation modules, implement all market rotaion, implement astrology data
- Add  new calculation modules (accumulation, bid/ask, broker data, broker inventory, foreign flow, money flow)
- Implement Azure Blob Storage integration for all calculations
- Add 2-phase scheduler execution with proper dependencies
- Add stock API with sector mapping support
- Optimize astrology page with caching and search functionality
- Add loading states and + buttons for better UX
- Fix TypeScript errors across all modules
- Add manual trigger endpoints and admin dashboard integration
- Implement proper error handling and batch processing

--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -95,18 +95,27 @@ jobs:
             AZURE_STORAGE_CONTAINER_NAME=${{ secrets.AZURE_STORAGE_CONTAINER_NAME }} \
             TICMI_JWT_TOKEN=${{ secrets.TICMI_JWT_TOKEN }} \
             TICMI_API_BASE_URL=${{ secrets.TICMI_API_BASE_URL }} \
-            TICMI_STOCK_ENDPOINT=${{ secrets.TICMI_STOCK_ENDPOINT }} \
-            TICMI_INDEX_ENDPOINT=${{ secrets.TICMI_INDEX_ENDPOINT }} \
-            TICMI_SHAREHOLDERS_ENDPOINT=${{ secrets.TICMI_SHAREHOLDERS_ENDPOINT }} \
-            TICMI_HOLDING_ENDPOINT=${{ secrets.TICMI_HOLDING_ENDPOINT }} \
+            HOLDING_ENDPOINT=${{ secrets.TICMI_HOLDING_ENDPOINT }} \
             SCHEDULER_TIMEZONE=${{ secrets.SCHEDULER_TIMEZONE }} \
             SCHEDULER_STOCK_UPDATE_TIME=${{ secrets.SCHEDULER_STOCK_UPDATE_TIME }} \
             SCHEDULER_INDEX_UPDATE_TIME=${{ secrets.SCHEDULER_INDEX_UPDATE_TIME }} \
-            SCHEDULER_SHAREHOLDERS_UPDATE_TIME=${{ secrets.SCHEDULER_SHAREHOLDERS_UPDATE_TIME }} \
-            SCHEDULER_HOLDING_UPDATE_TIME=${{ secrets.SCHEDULER_HOLDING_UPDATE_TIME }} \
+            SCHEDULER_DONE_SUMMARY_UPDATE_TIME=${{ secrets.SCHEDULER_DONE_SUMMARY_UPDATE_TIME }} \
             SCHEDULER_RRC_UPDATE_TIME=${{ secrets.SCHEDULER_RRC_UPDATE_TIME }} \
             SCHEDULER_RRG_UPDATE_TIME=${{ secrets.SCHEDULER_RRG_UPDATE_TIME }} \
             SCHEDULER_SEASONAL_UPDATE_TIME=${{ secrets.SCHEDULER_SEASONAL_UPDATE_TIME }} \
+            SCHEDULER_TREND_FILTER_UPDATE_TIME=${{ secrets.SCHEDULER_TREND_FILTER_UPDATE_TIME }} \
+            SCHEDULER_PHASE1_UPDATE_TIME=${{ secrets.SCHEDULER_PHASE1_UPDATE_TIME }} \
+            SCHEDULER_PHASE2_UPDATE_TIME=${{ secrets.SCHEDULER_PHASE2_UPDATE_TIME }} \
+            SCHEDULER_ACCUMULATION_UPDATE_TIME=${{ secrets.SCHEDULER_ACCUMULATION_UPDATE_TIME }} \
+            SCHEDULER_BIDASK_UPDATE_TIME=${{ secrets.SCHEDULER_BIDASK_UPDATE_TIME }} \
+            SCHEDULER_BROKER_UPDATE_TIME=${{ secrets.SCHEDULER_BROKER_UPDATE_TIME }} \
+            SCHEDULER_BROKER_INVENTORY_UPDATE_TIME=${{ secrets.SCHEDULER_BROKER_INVENTORY_UPDATE_TIME }} \
+            SCHEDULER_FOREIGN_UPDATE_TIME=${{ secrets.SCHEDULER_FOREIGN_UPDATE_TIME }} \
+            SCHEDULER_MONEYFLOW_UPDATE_TIME=${{ secrets.SCHEDULER_MONEYFLOW_UPDATE_TIME }} \
+            GCS_PROJECT_ID=${{ secrets.GCS_PROJECT_ID }} \
+            GCS_BUCKET_NAME=${{ secrets.GCS_BUCKET_NAME }} \
+            MAX_CONCURRENT_REQUESTS=${{ secrets.MAX_CONCURRENT_REQUESTS }} \
+            BATCH_SIZE=${{ secrets.BATCH_SIZE }} \
             EMITEN_CSV_PATH=${{ secrets.EMITEN_CSV_PATH }} \
             INDEX_CSV_PATH=${{ secrets.INDEX_CSV_PATH }} \
             LOG_LEVEL=${{ secrets.LOG_LEVEL }}
