--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@azure/storage-blob": "^12.17.0",
+    "@google-cloud/storage": "^7.7.0",
     "@supabase/supabase-js": "^2.75.0",
     "@types/node-cron": "^3.0.11",
     "cors": "^2.8.5",
