feat: synchronize file and module name

--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -106,6 +106,8 @@ jobs:
             SCHEDULER_TREND_FILTER_UPDATE_TIME=${{ secrets.SCHEDULER_TREND_FILTER_UPDATE_TIME }} \
             SCHEDULER_PHASE1_UPDATE_TIME=${{ secrets.SCHEDULER_PHASE1_UPDATE_TIME }} \
             SCHEDULER_PHASE2_UPDATE_TIME=${{ secrets.SCHEDULER_PHASE2_UPDATE_TIME }} \
+            SCHEDULER_SHAREHOLDERS_UPDATE_TIME=${{ secrets.SCHEDULER_SHAREHOLDERS_UPDATE_TIME }} \
+            SCHEDULER_HOLDING_UPDATE_TIME=${{ secrets.SCHEDULER_HOLDING_UPDATE_TIME }} \
             SCHEDULER_ACCUMULATION_UPDATE_TIME=${{ secrets.SCHEDULER_ACCUMULATION_UPDATE_TIME }} \
             SCHEDULER_BIDASK_UPDATE_TIME=${{ secrets.SCHEDULER_BIDASK_UPDATE_TIME }} \
             SCHEDULER_BROKER_UPDATE_TIME=${{ secrets.SCHEDULER_BROKER_UPDATE_TIME }} \
