--- a/backend/package.json
+++ b/backend/package.json
@@ -19,12 +19,14 @@
     "@azure/storage-blob": "^12.17.0",
     "@google-cloud/storage": "^7.7.0",
     "@supabase/supabase-js": "^2.75.0",
+    "@types/node-cache": "^4.1.3",
     "@types/node-cron": "^3.0.11",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "jose": "^6.1.0",
     "midtrans-client": "^1.4.3",
     "multer": "^2.0.2",
+    "node-cache": "^5.1.2",
     "node-cron": "^4.2.1",
     "node-fetch": "^3.3.2",
     "pg": "^8.16.3",
