--- a/backend/package.json
+++ b/backend/package.json
@@ -1,15 +1,16 @@
+
 {
   "name": "backend",
   "version": "0.1.0",
   "private": true,
   "type": "commonjs",
   "scripts": {
-    "dev": "NODE_OPTIONS='--max-old-space-size=16384 --expose-gc' nodemon --env-file=.env",
+    "dev": "cross-env NODE_OPTIONS=\"--max-old-space-size=16384 --expose-gc\" nodemon --env-file=.env",
     "build": "tsc",
-    "start": "NODE_OPTIONS='--max-old-space-size=16384 --expose-gc' node --env-file=.env dist/index.js",
+    "start": "cross-env NODE_OPTIONS=\"--max-old-space-size=16384 --expose-gc\" node --env-file=.env dist/index.js",
     "typecheck": "tsc --noEmit",
-    "build:prod": "NODE_ENV=production tsc",
-    "start:prod": "NODE_ENV=production NODE_OPTIONS='--max-old-space-size=16384 --expose-gc' node --env-file=.env dist/index.js",
+    "build:prod": "cross-env NODE_ENV=production tsc",
+    "start:prod": "cross-env NODE_ENV=production NODE_OPTIONS=\"--max-old-space-size=16384 --expose-gc\" node --env-file=.env dist/index.js",
     "lint": "eslint . --ext ts --report-unused-disable-directives --max-warnings 0"
   },
   "engines": {
@@ -39,6 +40,7 @@
     "@types/node": "^22.7.5",
     "@types/pg": "^8.15.5",
     "@types/uuid": "^9.0.7",
+    "cross-env": "^10.1.0",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
