--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -11,7 +11,7 @@ env:
   REGISTRY: ${{ secrets.CONTAINER_REGISTRY }}
   IMAGE_REPO: bandarmolony-backend
   RESOURCE_GROUP: ${{ secrets.RESOURCE_GROUP }}
-  CONTAINER_APP_NAME: ${{ secrets.CONTAINER_APP_NAME }}
+  CONTAINER_APP_NAME: ${{ secrets.BE_CONTAINER_APP_NAME }}
 
 jobs:
   build-and-deploy:
@@ -73,7 +73,6 @@ jobs:
             NODE_ENV=${{ secrets.NODE_ENV }} \
             PORT=${{ secrets.PORT }} \
             SUPABASE_URL=${{ secrets.SUPABASE_URL }} \
-            SUPABASE_ANON_KEY=${{ secrets.SUPABASE_ANON_KEY }} \
             SUPABASE_SERVICE_ROLE_KEY=${{ secrets.SUPABASE_SERVICE_ROLE_KEY }} \
             DATABASE_URL=${{ secrets.DATABASE_URL }} \
             MIDTRANS_MERCHANT_ID=${{ secrets.MIDTRANS_MERCHANT_ID }} \
@@ -95,16 +94,7 @@ jobs:
             AZURE_STORAGE_CONTAINER_NAME=${{ secrets.AZURE_STORAGE_CONTAINER_NAME }} \
             TICMI_JWT_TOKEN=${{ secrets.TICMI_JWT_TOKEN }} \
             TICMI_API_BASE_URL=${{ secrets.TICMI_API_BASE_URL }} \
-            HOLDING_ENDPOINT=${{ secrets.TICMI_HOLDING_ENDPOINT }} \
-            SCHEDULER_TIMEZONE=${{ secrets.SCHEDULER_TIMEZONE }} \
-            GCS_PROJECT_ID=${{ secrets.GCS_PROJECT_ID }} \
-            GCS_BUCKET_NAME=${{ secrets.GCS_BUCKET_NAME }} \
-            MAX_CONCURRENT_REQUESTS=${{ secrets.MAX_CONCURRENT_REQUESTS }} \
-            BATCH_SIZE=${{ secrets.BATCH_SIZE }} \
-            EMITEN_CSV_PATH=${{ secrets.EMITEN_CSV_PATH }} \
-            INDEX_CSV_PATH=${{ secrets.INDEX_CSV_PATH }} \
-            LOG_LEVEL=${{ secrets.LOG_LEVEL }} \
-            NODE_OPTIONS="--max-old-space-size=8192 --expose-gc"
+            NODE_OPTIONS=${{ secrets.NODE_OPTIONS }}
 
     - name: Show deployed image
       run: |
