--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -70,31 +70,31 @@ jobs:
           --resource-group ${{ env.RESOURCE_GROUP }} \
           --image ${{ env.IMAGE }} \
           --replace-env-vars \
-            NODE_ENV=${{ secrets.NODE_ENV }} \
-            PORT=${{ secrets.PORT }} \
-            SUPABASE_URL=${{ secrets.SUPABASE_URL }} \
-            SUPABASE_SERVICE_ROLE_KEY=${{ secrets.SUPABASE_SERVICE_ROLE_KEY }} \
-            DATABASE_URL=${{ secrets.DATABASE_URL }} \
-            MIDTRANS_MERCHANT_ID=${{ secrets.MIDTRANS_MERCHANT_ID }} \
-            MIDTRANS_CLIENT_KEY=${{ secrets.MIDTRANS_CLIENT_KEY }} \
-            MIDTRANS_SERVER_KEY=${{ secrets.MIDTRANS_SERVER_KEY }} \
-            MIDTRANS_IS_PRODUCTION=${{ secrets.MIDTRANS_IS_PRODUCTION }} \
-            MIDTRANS_3DS=${{ secrets.MIDTRANS_3DS }} \
-            MIDTRANS_SANITIZED=${{ secrets.MIDTRANS_SANITIZED }} \
-            MIDTRANS_PAYMENT_NOTIFICATION_URL=${{ secrets.MIDTRANS_PAYMENT_NOTIFICATION_URL }} \
-            MIDTRANS_RECURRING_NOTIFICATION_URL=${{ secrets.MIDTRANS_RECURRING_NOTIFICATION_URL }} \
-            MIDTRANS_PAY_ACCOUNT_NOTIFICATION_URL=${{ secrets.MIDTRANS_PAY_ACCOUNT_NOTIFICATION_URL }} \
-            MIDTRANS_FINISH_REDIRECT_URL=${{ secrets.MIDTRANS_FINISH_REDIRECT_URL }} \
-            MIDTRANS_UNFINISH_REDIRECT_URL=${{ secrets.MIDTRANS_UNFINISH_REDIRECT_URL }} \
-            MIDTRANS_ERROR_REDIRECT_URL=${{ secrets.MIDTRANS_ERROR_REDIRECT_URL }} \
-            FRONTEND_URL=${{ secrets.FRONTEND_URL }} \
-            CORS_ORIGIN=${{ secrets.CORS_ORIGIN }} \
-            PAYMENT_TIMEOUT_MINUTES=${{ secrets.PAYMENT_TIMEOUT_MINUTES }} \
-            AZURE_STORAGE_CONNECTION_STRING=${{ secrets.AZURE_STORAGE_CONNECTION_STRING }} \
-            AZURE_STORAGE_CONTAINER_NAME=${{ secrets.AZURE_STORAGE_CONTAINER_NAME }} \
-            TICMI_JWT_TOKEN=${{ secrets.TICMI_JWT_TOKEN }} \
-            TICMI_API_BASE_URL=${{ secrets.TICMI_API_BASE_URL }} \
-            NODE_OPTIONS=${{ secrets.NODE_OPTIONS }}
+            NODE_ENV="${{ secrets.NODE_ENV }}" \
+            PORT="${{ secrets.PORT }}" \
+            SUPABASE_URL="${{ secrets.SUPABASE_URL }}" \
+            SUPABASE_SERVICE_ROLE_KEY="${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}" \
+            DATABASE_URL="${{ secrets.DATABASE_URL }}" \
+            MIDTRANS_MERCHANT_ID="${{ secrets.MIDTRANS_MERCHANT_ID }}" \
+            MIDTRANS_CLIENT_KEY="${{ secrets.MIDTRANS_CLIENT_KEY }}" \
+            MIDTRANS_SERVER_KEY="${{ secrets.MIDTRANS_SERVER_KEY }}" \
+            MIDTRANS_IS_PRODUCTION="${{ secrets.MIDTRANS_IS_PRODUCTION }}" \
+            MIDTRANS_3DS="${{ secrets.MIDTRANS_3DS }}" \
+            MIDTRANS_SANITIZED="${{ secrets.MIDTRANS_SANITIZED }}" \
+            MIDTRANS_PAYMENT_NOTIFICATION_URL="${{ secrets.MIDTRANS_PAYMENT_NOTIFICATION_URL }}" \
+            MIDTRANS_RECURRING_NOTIFICATION_URL="${{ secrets.MIDTRANS_RECURRING_NOTIFICATION_URL }}" \
+            MIDTRANS_PAY_ACCOUNT_NOTIFICATION_URL="${{ secrets.MIDTRANS_PAY_ACCOUNT_NOTIFICATION_URL }}" \
+            MIDTRANS_FINISH_REDIRECT_URL="${{ secrets.MIDTRANS_FINISH_REDIRECT_URL }}" \
+            MIDTRANS_UNFINISH_REDIRECT_URL="${{ secrets.MIDTRANS_UNFINISH_REDIRECT_URL }}" \
+            MIDTRANS_ERROR_REDIRECT_URL="${{ secrets.MIDTRANS_ERROR_REDIRECT_URL }}" \
+            FRONTEND_URL="${{ secrets.FRONTEND_URL }}" \
+            CORS_ORIGIN="${{ secrets.CORS_ORIGIN }}" \
+            PAYMENT_TIMEOUT_MINUTES="${{ secrets.PAYMENT_TIMEOUT_MINUTES }}" \
+            AZURE_STORAGE_CONNECTION_STRING="${{ secrets.AZURE_STORAGE_CONNECTION_STRING }}" \
+            AZURE_STORAGE_CONTAINER_NAME="${{ secrets.AZURE_STORAGE_CONTAINER_NAME }}" \
+            TICMI_JWT_TOKEN="${{ secrets.TICMI_JWT_TOKEN }}" \
+            TICMI_API_BASE_URL="${{ secrets.TICMI_API_BASE_URL }}" \
+            NODE_OPTIONS="${{ secrets.NODE_OPTIONS }}"
 
     - name: Show deployed image
       run: |
