--- a/.github/workflows/resize-before-scheduler.yml
+++ b/.github/workflows/resize-before-scheduler.yml
@@ -28,14 +28,20 @@ jobs:
       - name: Get Scheduler Config
         id: get-config
         run: |
+          echo "🔍 Event Type: ${{ github.event_name }}"
+          echo "🔍 Event Action: ${{ github.event.action }}"
+          
           # If triggered via webhook, use payload
           if [ "${{ github.event_name }}" = "repository_dispatch" ]; then
+            echo "✅ Triggered via repository_dispatch webhook"
+            echo "📋 Event Type: ${{ github.event.action }}"
             SCHEDULER_TIME="${{ github.event.client_payload.new_time }}"
             TIMEZONE="${{ github.event.client_payload.timezone }}"
             WEEKEND_SKIP="${{ github.event.client_payload.weekend_skip }}"
             echo "📥 Using webhook payload: $SCHEDULER_TIME ($TIMEZONE)"
           else
             # If polling, fetch from API
+            echo "📡 Triggered via schedule/polling"
             RESPONSE=$(curl -s "$API_URL/api/public/scheduler/config")
             SCHEDULER_TIME=$(echo $RESPONSE | jq -r '.data.config.PHASE1_DATA_COLLECTION_TIME')
             TIMEZONE=$(echo $RESPONSE | jq -r '.data.config.TIMEZONE')
